--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:id="@+id/main_activity_test"
         android:layout_width="155dp"
         android:layout_height="56dp"
-        android:text="TextView"
+        android:text="@string/landing_page"
         android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
