--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#039BE5</color>
-    <color name="colorPrimaryDark">#0288D1</color>
+    <color name="colorPrimary">#FFC107</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FFA000</color>
 
     <color name="grey_100">#F5F5F5</color>
