Attached the CurrentLocation activity to the main project. Tyson and Edward please test my implementation to verify the "location permission" is working properly!

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -146,6 +146,15 @@
                 android:layout_weight="1"
                 android:text="@string/explore"
                 android:theme="@style/ThemeOverlay.MyDarkButton" />
+            <Button
+                android:id="@+id/geofenceButton"
+                android:layout_marginStart="@dimen/button_horizontal_margin"
+                android:layout_marginEnd="@dimen/button_horizontal_margin"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/geofence"
+                android:theme="@style/ThemeOverlay.MyDarkButton" />
 
             <Button
                 android:id="@+id/reloadButton"
