--- a/app/src/main/res/layout/activity_current_location.xml
+++ b/app/src/main/res/layout/activity_current_location.xml
@@ -24,14 +24,20 @@
         <TextView
             android:id="@+id/currentLocationTxt"
             android:layout_width="match_parent"
-            android:layout_height="34dp"
+            android:layout_height="179dp"
             android:text="@string/location"
             android:textAlignment="center" />
+
+        <TextView
+            android:id="@+id/coordinates"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/gps_location" />
 
         <Button
             android:id="@+id/getLocationBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/get_location" />
+            android:text="@string/get_coordinates" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
