--- a/app/src/main/res/layout/activity_landmark.xml
+++ b/app/src/main/res/layout/activity_landmark.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/landMarkTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="This is where Landmark stuff goes"
+        android:text="loading data..."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
