Working on a displaying the ListView in CurrentLocation.java. ArrayList<LandMark> has been created and instantied, need to figure out LandmarkAdapter.java to populate all locations in the ListView!

--- a/app/src/main/res/layout/activity_current_location.xml
+++ b/app/src/main/res/layout/activity_current_location.xml
@@ -39,5 +39,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/get_coordinates" />
+
+        <ListView
+            android:id="@+id/listViewLocations"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
