activity for add landmark to database and update the landmark class and little bit update on bridge

--- a/app/src/main/res/layout/activity_current_location.xml
+++ b/app/src/main/res/layout/activity_current_location.xml
@@ -42,13 +42,19 @@
 
         <ListView
             android:id="@+id/listViewLocations"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="112dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/addDataPage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="addDataPage"
+            android:text="GoToAdddata" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
