--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#97FDEE"
-        android:endColor="#27789E"
+        android:startColor="#AEFFF3"
+        android:endColor="#5CBAE6"
         android:angle="225"/>
 </shape>
