--- a/app/src/main/res/layout/activity_get_user_location_details.xml
+++ b/app/src/main/res/layout/activity_get_user_location_details.xml
@@ -6,53 +6,50 @@
     android:layout_height="match_parent"
     tools:context=".getUserLocationDetails">
 
-    <ImageView
-        android:id="@+id/icon"
-        style="@style/ThemeOverlay.FirebaseIcon"
-        android:layout_width="118dp"
-        android:layout_height="134dp"
-        android:contentDescription="@string/desc_firebase_lockup"
-        android:src="@drawable/logo"
-        app:layout_constraintBottom_toTopOf="@+id/UserLocationDetails"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.59" />
-
-    <TextView
-        android:id="@+id/UserLocationDetails"
-        android:layout_width="324dp"
-        android:layout_height="287dp"
-        android:text="@string/loading_current_location"
-        android:textAlignment="center"
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/geofriendbackground"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/GPSCoordinates"
-        android:layout_width="293dp"
-        android:layout_height="40dp"
-        android:text="@string/show_exact_gps_coordinates"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.364"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.756" />
+        <TextView
+            android:id="@+id/UserLocationDetails"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/loading_current_location"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.524" />
 
-    <Button
-        android:id="@+id/getGPSCoordinates"
-        android:layout_width="162dp"
-        android:layout_height="68dp"
-        android:text="@string/get_coordinates"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/GPSCoordinates"
-        app:layout_constraintVertical_bias="0.19" />
+        <TextView
+            android:id="@+id/GPSCoordinates"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/show_exact_gps_coordinates"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.531"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.711" />
+
+        <Button
+            android:id="@+id/getGPSCoordinates"
+            android:layout_width="162dp"
+            android:layout_height="68dp"
+            android:text="@string/get_coordinates"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/GPSCoordinates"
+            app:layout_constraintVertical_bias="0.19" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
