--- a/app/src/main/res/layout/activity_get_user_location_details.xml
+++ b/app/src/main/res/layout/activity_get_user_location_details.xml
@@ -4,52 +4,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".getUserLocationDetails">
+    tools:context=".getUserLocationDetails"
+    android:background="@drawable/geofriendbackground">
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:background="@drawable/geofriendbackground"
-        android:orientation="vertical"
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="242dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/UserLocationDetails"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/UserLocationDetails"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/loading_current_location"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.442" />
 
-        <TextView
-            android:id="@+id/UserLocationDetails"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/loading_current_location"
-            android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.524" />
+    <TextView
+        android:id="@+id/GPSCoordinates"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/show_exact_gps_coordinates"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/UserLocationDetails"
+        app:layout_constraintVertical_bias="0.0" />
 
-        <TextView
-            android:id="@+id/GPSCoordinates"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/show_exact_gps_coordinates"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.531"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.711" />
+    <Button
+        android:id="@+id/getGPSCoordinates"
+        android:layout_width="162dp"
+        android:layout_height="68dp"
+        android:text="@string/get_coordinates"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/GPSCoordinates"
+        app:layout_constraintVertical_bias="0.041" />
 
-        <Button
-            android:id="@+id/getGPSCoordinates"
-            android:layout_width="162dp"
-            android:layout_height="68dp"
-            android:text="@string/get_coordinates"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/GPSCoordinates"
-            app:layout_constraintVertical_bias="0.19" />
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
