Background ready for approval. getUserLocationDetails Activity is completed. Perhaps style image buttons or colour?

--- a/app/src/main/res/layout/activity_get_user_location_details.xml
+++ b/app/src/main/res/layout/activity_get_user_location_details.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".getUserLocationDetails"
-    android:background="@drawable/geofriendbackground">
+    android:alpha="0.90"
+    android:background="@drawable/geofriendbackground"
+    tools:context=".getUserLocationDetails">
 
     <Space
         android:layout_width="match_parent"
@@ -29,19 +30,19 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.442" />
+        app:layout_constraintVertical_bias="0.446" />
 
     <TextView
         android:id="@+id/GPSCoordinates"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/show_exact_gps_coordinates"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/UserLocationDetails"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/getGPSCoordinates"
+        app:layout_constraintVertical_bias="0.03" />
 
     <Button
         android:id="@+id/getGPSCoordinates"
@@ -52,7 +53,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/GPSCoordinates"
-        app:layout_constraintVertical_bias="0.041" />
+        app:layout_constraintTop_toBottomOf="@+id/UserLocationDetails"
+        app:layout_constraintVertical_bias="0.021" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
