Added rounded corners to PopUp
Signed-off-by: TysonMoonie <tysonshane97@gmail.com>

--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -5,4 +5,6 @@
         android:startColor="#5BBFCC"
         android:endColor="#43A8B5"
         android:angle="225"/>
+    <corners android:radius="10dp"/>
+    
 </shape>
