Added rounded corners to PopUp
Signed-off-by: TysonMoonie <tysonshane97@gmail.com>

--- a/app/src/main/res/layout/activity_landmark.xml
+++ b/app/src/main/res/layout/activity_landmark.xml
@@ -23,6 +23,7 @@
         android:layout_width="269dp"
         android:layout_height="311dp"
         android:layout_marginTop="40dp"
+        android:background="#00FFFFFF"
         android:fontFamily="@font/aldrich"
         android:text="Click me to learn about this landmark!"
         android:textAlignment="center"
