--- a/app/src/main/res/layout/activity_current_location.xml
+++ b/app/src/main/res/layout/activity_current_location.xml
@@ -15,24 +15,30 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/listViewLocationsTitle"
+            android:layout_width="match_parent"
+            android:layout_height="142dp"
+            android:fontFamily="@font/aldrich"
+            android:gravity="fill_vertical"
+            android:text="Landmarks"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="36sp"
+            android:textStyle="bold" />
+
         <Space
             android:layout_width="match_parent"
-            android:layout_height="190dp" />
+            android:layout_height="wrap_content" />
 
         <ListView
             android:id="@+id/listViewLocations"
             android:layout_width="wrap_content"
-            android:layout_height="300dp"
+            android:layout_height="492dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/UserCurrentLocationDetailsBttn"
-            android:layout_width="match_parent"
-            android:layout_height="62dp"
-            android:text="@string/current_location_bttn_txt" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
