--- a/app/src/main/res/layout/activity_current_location.xml
+++ b/app/src/main/res/layout/activity_current_location.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".CurrentLocation"
     android:alpha="0.90"
-    android:background="@drawable/geofriendbackground">
+    android:background="@drawable/bluegradient">
 
     <LinearLayout
         android:id="@+id/currentLocationLayout"
