--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,6 +51,13 @@
             android:text="@string/app_name"
             android:visibility="visible"
             tools:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="216dp"
+            android:scaleType="center"
+            app:srcCompat="@drawable/logo" />
     </LinearLayout>
 
     <RelativeLayout
