Created functions to populate visited landmarks from the database. No more of the landmarks are stored locally.
Signed-off-by: TysonMoonie <tysonshane97@gmail.com>

--- a/app/src/main/res/layout/activity_current_location.xml
+++ b/app/src/main/res/layout/activity_current_location.xml
@@ -36,6 +36,8 @@
             android:id="@+id/listViewLocations"
             android:layout_width="wrap_content"
             android:layout_height="492dp"
+            android:background="#BC62BC50"
+            android:backgroundTint="#B062C552"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
