--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,25 +32,22 @@
         <TextView
             android:id="@+id/titleText"
             android:layout_width="350dp"
-            android:layout_height="wrap_content"
+            android:layout_height="88dp"
             android:layout_marginBottom="@dimen/title_bottom_margin"
-            android:fontFamily="@font/aldrich"
             android:text="@string/geofriend_title_text"
-            android:textColor="#000000"
+            android:fontFamily="@font/aldrich"
+
+            android:shadowColor="#000000"
+            android:shadowDx="1.9"
+            android:shadowDy="1.9"
+            android:shadowRadius="2.0"
+            android:textColor="#D1CFCF"
+
+
             android:textSize="48sp"
+
+
             android:theme="@style/ThemeOverlay.MyTitleText" />
-
-        <TextView
-            android:id="@+id/status"
-            style="@style/ThemeOverlay.MyTextDetail"
-            android:text="@string/signed_out" />
-
-        <TextView
-            android:id="@+id/detail"
-            style="@style/ThemeOverlay.MyTextDetail"
-            android:text="@string/app_name"
-            android:visibility="visible"
-            tools:visibility="visible" />
 
         <ImageView
             android:id="@+id/imageView"
