--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="R.color.trans"
+        android:background="#00000000"
         android:onClick="privacypage"
         android:text="Privacy Policy"
         android:textColorHint="#FFFFFF"
