--- a/app/src/main/res/layout/activity_privacy_policy.xml
+++ b/app/src/main/res/layout/activity_privacy_policy.xml
@@ -1,17 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_privacy_policyctivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bluegradient"
+    android:orientation="vertical"
     tools:context=".PrivacyPolicyActivity">
 
-    <WebView
-        android:id="@+id/webView"
-        android:layout_width="368dp"
-        android:layout_height="503dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp" />
-</androidx.wear.widget.BoxInsetLayout>
+    <TextView
+        android:id="@+id/launchTitle2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/aldrich"
+        android:shadowColor="#000000"
+        android:shadowDx="1.9"
+        android:shadowDy="1.9"
+
+        android:shadowRadius="2.0"
+        android:text="Privacy Policy"
+        android:textAlignment="center"
+        android:textColor="#D1CFCF"
+        android:textSize="48sp" />
+
+    <TextView
+        android:id="@+id/termsOfUse2"
+        android:layout_width="match_parent"
+        android:layout_height="509dp"
+        android:scrollbars="vertical"
+        android:shadowColor="#000000"
+        android:shadowDx="1.9"
+        android:shadowDy="1.9"
+        android:shadowRadius="2.0"
+        android:text="TextView"
+
+        android:textAlignment="center"
+        android:textColor="#D1CFCF"
+        android:textSize="24sp" />
+</LinearLayout>
