--- a/app/src/main/res/layout/activity_landmark.xml
+++ b/app/src/main/res/layout/activity_landmark.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/landmarkName"
+        android:id="@+id/permissionsTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
@@ -41,12 +41,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/landmarkName"
+        app:layout_constraintTop_toBottomOf="@+id/permissionsTitle"
 
         />
 
     <TextView
-        android:id="@+id/landmarkDescription"
+        android:id="@+id/prominentDisclosure"
         android:layout_width="263dp"
         android:layout_height="72dp"
         android:layout_marginTop="28dp"
@@ -78,7 +78,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/landmarkDescription"
+        app:layout_constraintTop_toBottomOf="@+id/prominentDisclosure"
         app:layout_constraintVertical_bias="0.064" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
